--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ height: 106px;
 left: 250px;
 top: 84px;
 
-background: url(/Figma/imgs/logocores\ 1.png);
+background: url(../imgs/logocores\ 1.png);
 }
 
 .selecao{
